# CodePractice

./: .editorconfig  .gitignore  Cs_Base.sln  README.md
Algorithm/: BFS_Queue.cpp
Algorithms/TwoPointer/: LengthOfLongestSubstring.cpp  MoveEvensToFront.h  TwoPointer.vcxproj  TwoPointer.vcxproj.filters  TwoSum.cpp
Boj/Implementation/: ForNumber.cpp  ForNumber_Inverse.cpp  HelloWorld.cpp  Q2440.cpp  Stack.cpp
C#/Basic/Array/: Array.cs
C#/Basic/Collection1/: Collection1.cs
C#/Basic/Constructor/: Constructor.cs  Constructor.csproj
C#/Basic/LocalFunction/: Program.cs
C#/Basic/NullType/: NullType.csproj
C#/Basic/ValueVsRef/: ValueVsRef.cs
C#/Basic/Values/: Values.csproj
C#/Practice/Inheritance1/: Enemy.cs  ICharacter.cs  Inheritance1.sln  Player.cs
C#/Practice/Practice/: Program.cs
C#/Practice/Test1/: Test1.sln
C++/Customlibraries/Input/: Input.sln  Input.vcxproj
C++/Customlibraries/Render/: Render.vcxproj  Renderer.cpp  Renderer.h  Renderer.sln
C++/Customlibraries/Time/: GameTime.cpp  Time.vcxproj  Time.vcxproj.filters
C++/DirectX11/First/: First.sln  (+1 more)
C++/WinApi/WinApiForGameDev/Day6/: CMakeLists.txt  Day6.cpp  Mapping2.cpp  file.txt  otherFile.txt  test.txt
C++/WinApi/WinApiForGameDev/Day7/: CMakeLists.txt  Day7.cpp  Day7_2.cpp
Cpp/Boj/: Boj_Q4485.cpp
Cs/: Cs_Base.sln
Cs/Cs_Base/: Program.cs  Recursive_backtracking.cs
Cs_Base/: Cs_Base.sln
Cs_Base/Cs_Base/: Recursive_backtracking.cs
Cs_Base/Test/: main.cs
cpp/20240929/: 20240929.sln
cpp/20241001/: 20241001.sln
cpp/WinApi/Snake/Snake2/: CMakeLists.txt
cpp/WinApi/Snake/Snake2/game/src/: gameLogic.cpp  snake.cpp
cpp/WinApi/Snake/Snake2/platform/include/: gameWindowBuffer.h  input.h
cpp/WinApi/Snake/Snake2/platform/src/: gameWindowBuffer.cpp  main.cpp
cpp/WinApi/WinApiForGameDev/Day15_1/: CMakeLists.txt
cpp/WinApi/WinApiForGameDev/Day15_1/game/include/: gameLogic.h
cpp/WinApi/WinApiForGameDev/Day15_1/platform/src/: main.cpp
cs/Basic/: Basic.sln
data_structure/231230_TreeNode/: Project1.sln
libs/BaseUtility/: GameTime.h
libs/BaseUtility_Debug/: Vector2.h
libs/Input/: Input.cpp  Input.vcxproj.filters
libs/Render/: Render.vcxproj.filters
libs/Time/: GameTime.cpp  GameTime.sln  Time.cpp  Time.vcxproj  Time.vcxproj.filters
libs/Vector2/: Vector2.cpp  Vector2.h
(+1178 files in other folders)
